--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="/css/index.css" />
     <link
-      href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,900&display=swap"
+      href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,500,900&display=swap"
       rel="stylesheet"
     />
     <title>Document</title>
@@ -13,7 +13,7 @@
   <body>
     <div class="main-intro">
       <p class="top-text"></p>
-      <h1>Learn How to Make Avocado Toast</h1>
+      <h1>Learn How To Make <strong> Best Avocado Toast</strong></h1>
       <p>Join us for live webinar</p>
     </div>
     <div class="main-content">
