--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     </div>
     <div class="main-content">
       <h2>Become a toast master</h2>
-      <p>Register Today</p>
-      <p>
+      <p class="register">Register Today</p>
+      <p class="toast-description">
         Avacado toast is one of the best toast ever. The main benefits came from
         this that is healthy, easy to prepare and tasty.
       </p>
