--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
   <body>
     <div class="main-intro">
       <p class="top-text"></p>
-      <h1>Learn How To Make <strong> Best Avocado Toast</strong></h1>
+      <h1>Learn How To Make <strong> Best Avocado Toast</strong> Ever.</h1>
     </div>
     <div class="main-content">
       <h2>Become a toast master</h2>
       <p class="register">Register Today</p>
       <p class="toast-description">
         Avacado toast is one of the best toast ever. The main benefits came from
-        this that is healthy, easy to prepare and tasty.
+        this that is healthy, easy to prepare and delicious.
       </p>
       <!-- form will go here -->
       <p class="fine-print">
