--- a/index.html
+++ b/index.html
@@ -22,7 +22,16 @@
         Avacado toast is one of the best toast ever. The main benefits came from
         this that is healthy, easy to prepare and delicious.
       </p>
-      <!-- form will go here -->
+      <form class="form-collector" action="#" method="post">
+        <input
+          aria-label="First Name"
+          type="text"
+          placeholder="First Name"
+          required
+        />
+        <input aria-label="Email" type="email" placeholder="Email" required />
+        <button class="btn btn-primary" type="submit">Register</button>
+      </form>
       <p class="fine-print">
         We'll never share your information without your permission
       </p>
