--- a/index.html
+++ b/index.html
@@ -8,15 +8,14 @@
       href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,500,700,900&display=swap"
       rel="stylesheet"
     />
-    <title>Document</title>
+    <title>Best Avocado Toast</title>
   </head>
   <body>
     <div class="main-intro">
-      <p class="top-text"></p>
       <h1>Learn How To Make <strong> Best Avocado Toast</strong> Ever.</h1>
     </div>
     <div class="main-content">
-      <h2>Become a toast master</h2>
+      <h2>Want to become avocado toast master?</h2>
       <p class="register">Register Today</p>
       <p class="toast-description">
         Avacado toast is one of the best toast ever. The main benefits came from
@@ -32,6 +31,7 @@
         <input aria-label="Email" type="email" placeholder="Email" required />
         <button class="btn btn-primary" type="submit">Register</button>
       </form>
+      <>
     </div>
   </body>
 </html>
