--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div class="main-intro">
-      <h1>Learn How To Make <strong> Best Avocado Toast</strong> Ever.</h1>
+      <h1>Learn How To Make it <strong> Best Avocado Toast</strong> Ever.</h1>
     </div>
     <div class="main-content">
       <h2>Want to become avocado toast master?</h2>
